[package]
name = "systemd-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_derive = "1.0.147"
serde_json = "1.0.87"
clap = {version = "4.1.4", features = ["derive"]}

