[package]
name = "systemd-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# If you only wanted dynamic library, you'd use only "cdylib".
# If you only wanted static library, you'd use only "staticlib".
# This demo shows both. See https://doc.rust-lang.org/reference/linkage.html
# for more information.
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
pest = "2.0"
pest_derive = "2.0"
serde = {version = "1.0.147", features = ["derive"]}
serde_derive = "1.0.147"
serde_json = "1.0.87"
clap = {version = "4.1.4", features = ["derive"]}
libc = "0.2.139"

